--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -1,5 +1,5 @@
 kumuluzee:
-  name: dostavljalec-service
+  name: primerjava-service
   version: 1.0.0
   env:
     name: dev
@@ -8,8 +8,8 @@ kumuluzee:
     http:
       port: 8080
   datasources:
-    - jndi-name: jdbc/dostavljalecDS
-      connection-url: jdbc:postgresql://dostavljalecservice:5432/dostavljalec
-      username: postgres
+    - jndi-name: jdbc/db-primerjava
+      connection-url: jdbc:postgresql://db-primerjava:5432/primerjava
+      username: dbuser
       password: postgres
       max-pool-size: 20
