--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   server:
     build: .
-    container_name: "server"
+    container_name: "pockar/primerjava"
     ports:
       - "8080:8080"
     depends_on:
@@ -12,8 +12,8 @@ services:
     restart: always
     ports:
       - "5432:5432"
-    container_name: "db-primerjava"
+    container_name: "BAZA"
     environment:
-      - POSTGRES_USER=dbuser
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=products
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=tabela1
